[gd_scene load_steps=19 format=3 uid="uid://bq8ghvgcqohe0"]

[ext_resource type="PackedScene" uid="uid://cnbp8y38r54fe" path="res://Tilemap/tile_map_layer.tscn" id="1_7ssav"]
[ext_resource type="PackedScene" uid="uid://cjvvfm3amwp6g" path="res://Objects/hill_controller.tscn" id="1_orwce"]
[ext_resource type="Script" uid="uid://dby4lk5nvcvhy" path="res://Scripts/game_controller.gd" id="1_oyoxi"]
[ext_resource type="PackedScene" uid="uid://vgbonovnqwtb" path="res://Objects/bg_1.tscn" id="2_0v2h5"]
[ext_resource type="PackedScene" uid="uid://3rt3p8lc1ve5" path="res://Objects/player.tscn" id="2_64q6e"]
[ext_resource type="Script" uid="uid://bkl66krqqcnh" path="res://Scripts/background.gd" id="3_3b33p"]
[ext_resource type="Script" uid="uid://tji22c0jts2q" path="res://Scripts/disappear.gd" id="4_4axos"]
[ext_resource type="Script" uid="uid://dnx0bv13vltn5" path="res://Scripts/FileController.gd" id="6_2egs1"]
[ext_resource type="Script" uid="uid://carwt7braj1oh" path="res://Scripts/AudioController.gd" id="7_0l7ig"]
[ext_resource type="AudioStream" uid="uid://bw1l3tb184ogc" path="res://Audio/maou_game_village10.ogg" id="7_1ihqk"]
[ext_resource type="AudioStream" uid="uid://di1ln2ilix87x" path="res://Art/kenney_new-platformer-pack-1.0/Sounds/sfx_jump.ogg" id="7_vcyj5"]
[ext_resource type="AudioStream" uid="uid://t61jnggagbfi" path="res://Audio/maou_se_8bit12.ogg" id="8_6nri1"]
[ext_resource type="Texture2D" uid="uid://ckk10gohdatns" path="res://Art/play-button.png" id="10_uikm3"]
[ext_resource type="FontFile" uid="uid://b2csi4luj45w1" path="res://Font/NotoSansCJKtc-hinted/NotoSansCJKtc-Bold.otf" id="11_1c8xq"]
[ext_resource type="Texture2D" uid="uid://5jpujjoo8lkf" path="res://Art/cog.png" id="13_6nri1"]
[ext_resource type="PackedScene" uid="uid://b58t8fwoarv30" path="res://Objects/setting.tscn" id="14_472ab"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yct1b"]
size = Vector2(1161, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2s3jj"]
size = Vector2(94, 526)

[node name="Game" type="Node2D"]
script = ExtResource("1_oyoxi")

[node name="Background" type="Node2D" parent="."]
position = Vector2(-60, -126)

[node name="BG1" parent="Background" instance=ExtResource("2_0v2h5")]
script = ExtResource("3_3b33p")

[node name="BG2" parent="Background" instance=ExtResource("2_0v2h5")]
position = Vector2(1280, 0)
script = ExtResource("3_3b33p")

[node name="Hill controller" parent="." instance=ExtResource("1_orwce")]
position = Vector2(1186, 324)
create_area_Y = 8.0

[node name="地板" parent="." instance=ExtResource("1_7ssav")]
position = Vector2(18, 9)

[node name="Player" parent="." node_paths=PackedStringArray("GameController") instance=ExtResource("2_64q6e")]
position = Vector2(102, 116)
GameController = NodePath("..")
jump_audio = ExtResource("7_vcyj5")
die_audio = ExtResource("8_6nri1")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(570.5, -19)
shape = SubResource("RectangleShape2D_yct1b")

[node name="disappear" type="Area2D" parent="."]
position = Vector2(80, 2)
script = ExtResource("4_4axos")

[node name="CollisionShape2D" type="CollisionShape2D" parent="disappear"]
position = Vector2(-163, 250)
shape = SubResource("RectangleShape2D_2s3jj")

[node name="Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = 74.0
offset_right = 40.0
offset_bottom = 114.0

[node name="Start" type="TextureButton" parent="Menu"]
layout_mode = 0
offset_left = 513.0
offset_top = 228.0
offset_right = 666.0
offset_bottom = 392.0
texture_normal = ExtResource("10_uikm3")
ignore_texture_size = true
stretch_mode = 5

[node name="HighScore" type="Label" parent="Menu"]
layout_mode = 0
offset_left = 431.0
offset_top = 72.0
offset_right = 720.0
offset_bottom = 141.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("11_1c8xq")
theme_override_font_sizes/font_size = 50
text = "最高分數 : 0"

[node name="NowScore" type="Label" parent="Menu"]
layout_mode = 0
offset_left = 430.0
offset_top = 145.0
offset_right = 712.0
offset_bottom = 214.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("11_1c8xq")
theme_override_font_sizes/font_size = 50
text = "目前分數: 0"

[node name="GameTimer" type="Timer" parent="."]

[node name="Score" type="Label" parent="."]
offset_left = 971.0
offset_top = 8.0
offset_right = 1142.0
offset_bottom = 53.0
theme_override_colors/font_color = Color(0.00069389754, 0.00069389766, 0.0006938976, 1)
theme_override_font_sizes/font_size = 32
text = "0"
horizontal_alignment = 2

[node name="FileController" type="Node" parent="."]
script = ExtResource("6_2egs1")

[node name="AudioController" type="Node" parent="."]
script = ExtResource("7_0l7ig")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="AudioController" groups=["Audios"]]
stream = ExtResource("7_1ihqk")
volume_db = -5.0
parameters/looping = false

[node name="Cog" type="TextureButton" parent="."]
offset_left = 1.0
offset_top = 2.000002
offset_right = 513.0
offset_bottom = 514.0
scale = Vector2(0.08398438, 0.08398438)
texture_normal = ExtResource("13_6nri1")

[node name="Setting" parent="." instance=ExtResource("14_472ab")]
visible = false

[connection signal="body_entered" from="disappear" to="disappear" method="_on_body_entered"]
[connection signal="button_down" from="Menu/Start" to="." method="GameStart"]
[connection signal="timeout" from="GameTimer" to="." method="update_score"]
[connection signal="button_down" from="Cog" to="." method="GamePause"]
[connection signal="value_changed" from="Setting/HScrollBar" to="AudioController" method="_on_h_scroll_bar_value_changed"]
[connection signal="button_down" from="Setting/BackButton" to="." method="GamePause"]

[editable path="Hill controller"]
[editable path="Setting"]
